<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:consumeSystemWindowsInsets="@integer/internal_fragment_insets"
    app:edgeToEdge="true"
    app:fitsSystemWindowsInsets="@integer/internal_fragment_insets">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        app:fitsSystemWindowsInsets="@integer/internal_fragment_top_insets">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="?collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?collapsingToolbarLayoutLargeSize"
            android:fitsSystemWindows="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fitsSystemWindowsInsets="@integer/internal_fragment_bottom_insets"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingPrefix">

        <rikka.widget.borderview.BorderNestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:borderBottomVisibility="never"
            app:borderTopDrawable="@null"
            app:borderTopVisibility="whenTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
                android:paddingVertical="?dialogPreferredPadding"
                tools:context=".ui.activity.MainActivity">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/info_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="?dialogPreferredPadding">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_system_version" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/system_version"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_device" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/device"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_system_abi" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/system_abi"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_is_rooted" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/is_rooted"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_system_root" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/root_system"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/DeviceInfoDialogLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/info_is_emulator" />
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/is_emulator"
                            style="@style/DeviceInfoDialogValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </rikka.widget.borderview.BorderNestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
